<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="team_2">Team 2</string>
    <string name="team_1">Team 1</string>
    <string name="plus_button">Plus button</string>
    <string name="minus_button">Minus button</string>
    <string name="score_1_value">0</string>
    <string name="score_2_value">0</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>
